2002-06-07  Martin Baulig  <martin@gnome.org>

	* reflection.c (mono_image_get_type_info): Only add a class layout entry
	if we actually have a `tb->class_size' (ie. it's not UnspecifiedTypeSize).

Fri Jun 7 22:07:25 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* icall.c: more signature fixes that used uint instead of int.

Fri Jun 7 20:41:56 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* reflection.c: fixed signature of field refs.

Fri Jun 7 19:41:14 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* class.c, reflection.c: handle typerefs of nested types
	(both on read and when writing files).

Fri Jun 7 17:46:50 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* icall.c: fix method signatures that tried to workaround the previous
	typo, d'oh!

Fri Jun 7 17:36:33 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* debug-helpers.c: fix typo.

Fri Jun 7 17:00:04 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* cil-coff.h, icall.c, image.c, reflection.c, reflection.h:
	rewrote the PE/COFF writing code (our programs are understood by the
	ms runtime, now).

Tue Jun 4 18:10:47 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* gc.c, gc.h, icall.c: weakreference support.

Tue Jun 4 16:06:19 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* Makefile.am, mono-config.c: use $(sysconfdir).

Mon Jun 3 13:13:32 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* icall.c: changed default precision of Double.ToString() to 15.
	Fixed memory leak. Unified with Single.ToString.

Sat Jun 1 14:26:45 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* sysmath.c: workaround systems missing NAN and/or HUGE_VAL.

Sat Jun 1 13:46:54 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* pedump.c, appdomain.c, appdomain.h, assembly.c, domain.c,
	gc.c, icall.c, image.c, mono-config.c, reflection.c: killed
	warnings and compilation fixes from Dennis Haney (davh@davh.dk)
	and myself.

Fri May 31 16:58:36 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* debug-symfile.c, sysmath.c: yet more compilation fixes.
